[gd_scene load_steps=12 format=3 uid="uid://dcsf2j74ekmhc"]

[ext_resource type="Script" path="res://Player.gd" id="1_4jeyq"]
[ext_resource type="Texture2D" uid="uid://lfkiicqikhoa" path="res://art/player/w1.png" id="2_cg3q4"]
[ext_resource type="Texture2D" uid="uid://necxj6i7td42" path="res://art/player/w2.png" id="3_unfgc"]
[ext_resource type="Texture2D" uid="uid://bob6wt8a8w8hx" path="res://art/player/w3.png" id="4_xfi1r"]
[ext_resource type="Texture2D" uid="uid://0w8vlmq5fcdv" path="res://art/player/w4.png" id="5_30my5"]
[ext_resource type="Texture2D" uid="uid://c0ilm3wh4dggx" path="res://art/player/w5.png" id="6_7mod1"]
[ext_resource type="Texture2D" uid="uid://bmcnx3xi32kx3" path="res://art/player/w6.png" id="7_8cwgi"]
[ext_resource type="Texture2D" uid="uid://574ymanc1yto" path="res://art/player/w7.png" id="8_mxmev"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5y5p6"]
size = Vector2(63, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_r81xb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cg3q4")
}, {
"duration": 1.0,
"texture": ExtResource("3_unfgc")
}, {
"duration": 1.0,
"texture": ExtResource("4_xfi1r")
}, {
"duration": 1.0,
"texture": ExtResource("5_30my5")
}, {
"duration": 1.0,
"texture": ExtResource("6_7mod1")
}, {
"duration": 1.0,
"texture": ExtResource("7_8cwgi")
}, {
"duration": 1.0,
"texture": ExtResource("8_mxmev")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_wp1of"]
polygon = PackedVector2Array(-25, -12, -6, -28, 3, -28, 21, -13, 18, -3, 20, 4, 33, 2, 33, 8, 22, 14, 26, 32, -30, 31, -29, 25, -34, 23, -34, 19, -29, 19, -18, -4)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_4jeyq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_5y5p6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 12)
scale = Vector2(1.58594, 1.58594)
sprite_frames = SubResource("SpriteFrames_r81xb")
animation = &"idle"
frame_progress = 0.988229

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_wp1of")

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_blinking_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
